Adicionada funcionalidade de remoção de cubos. Criados testes unitários.